# OpportunityHub

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: admin.py  bookmarks.py  health.py  ingest.py  notifications.py  opportunities.py  profile.py  recommendations.py  router.py  search.py  traffic.py
backend/app/application/dtos/: admin.py  bookmark.py  notification.py  opportunity.py  pagination.py  profile.py  recommendation.py
backend/app/application/services/: admin_service.py  bookmark_service.py  notification_service.py  opportunity_service.py  profile_service.py  recommendation_service.py  traffic_service.py
backend/app/connectors/: base.py  curated_companies.py  curated_early_career.py  devpost.py  greenhouse.py  jobs_common.py  lever.py  pipeline.py  registry.py  run.py  service.py  unstop.py
backend/app/core/: cache.py  client_ip.py  config.py  exceptions.py  logging.py  pagination.py  rate_limit.py  request_context.py  security.py  security_headers.py  validators.py
backend/app/infrastructure/db/: session.py
backend/app/infrastructure/db/models/: bookmark.py  connector_run.py  notification.py  opportunity.py  profile.py
backend/app/seed/: opportunities.py
backend/migrations/: env.py
backend/migrations/versions/: 20260101_0001_initial_schema.py  20260201_0002_in_app_notification_channel.py  20260301_0003_experience_level.py  20260722_0004_rls_remaining_public_tables.py
backend/scripts/: start.sh
backend/tests/integration/: test_health_ready.py  test_rate_limit.py
backend/tests/unit/: test_client_ip.py  test_health.py
docs/: 03-api-design.md  (+9 more)
(+71 files in other folders)
