[project]
name = "opportunityhub-backend"
version = "0.1.0"
description = "OpportunityHub API — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "alembic>=1.13",
  "redis>=5.1",
  "celery[redis]>=5.4",
  "pyjwt[crypto]>=2.9",
  "structlog>=24.4",
  "httpx>=0.27",
  "meilisearch>=0.31",
  "pgvector>=0.3",
  "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Raw SQL migration statements are kept on single lines for readability/diffability.
"migrations/versions/*.py" = ["E501"]
# Seed / curated data contain long descriptive strings.
"app/seed/*.py" = ["E501"]
"app/connectors/curated_companies.py" = ["E501"]
"app/connectors/curated_early_career.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Share one event loop across the whole session so loop-bound resources
# (the Redis connection pool, async DB engine) stay valid across tests.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
